# openapi.json
@@ -5764,13 +5764,7 @@
     },
     "GetSignableCancelOrderResponse": {
       "type": "object",
-      "required": [
-        "order_id",
-        "payload_hash",
-        "readable_transaction",
-        "signable_message",
-        "verification_signature"
-      ],
+      "required": ["order_id", "payload_hash", "signable_message"],
       "properties": {
         "order_id": {
           "description": "ID of the order to be cancelled",
@@ -5780,16 +5774,8 @@
           "description": "Hash of the payload to be signed for cancel order",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx cancel order request to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign from wallet to confirm cancel order",
-          "type": "string"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
           "type": "string"
         }
       }
@@ -5803,7 +5789,8 @@
           "type": "string"
         },
         "token": {
-          "$ref": "#/definitions/getSignableDepositRequestToken"
+          "description": "Details of the token the user is depositing",
+          "$ref": "#/definitions/SignableToken"
         },
         "user": {
           "description": "User who is depositing",
@@ -5937,12 +5924,10 @@
         "expiration_timestamp",
         "nonce",
         "payload_hash",
-        "readable_transaction",
         "signable_message",
         "stark_key",
         "vault_id_buy",
-        "vault_id_sell",
-        "verification_signature"
+        "vault_id_sell"
       ],
       "properties": {
         "amount_buy": {
@@ -5976,10 +5961,6 @@
           "description": "Hash of the payload to be signed for signable order",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx order transaction to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign with L1 wallet to confirm order request",
           "type": "string"
@@ -5995,36 +5976,19 @@
         "vault_id_sell": {
           "description": "ID of the vault to sell from",
           "type": "integer"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
-          "type": "string"
         }
       }
     },
     "GetSignableRegistrationOffchainResponse": {
       "type": "object",
-      "required": [
-        "payload_hash",
-        "readable_transaction",
-        "signable_message",
-        "verification_signature"
-      ],
+      "required": ["payload_hash", "signable_message"],
       "properties": {
         "payload_hash": {
           "description": "Hash of the payload to be signed for user registration offchain",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx Register User Offchain request to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign with L1 wallet to register user offchain",
-          "type": "string"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
           "type": "string"
         }
       }
@@ -6045,12 +6009,7 @@
     },
     "GetSignableRegistrationResponse": {
       "type": "object",
-      "required": [
-        "operator_signature",
-        "payload_hash",
-        "readable_transaction",
-        "verification_signature"
-      ],
+      "required": ["operator_signature", "payload_hash"],
       "properties": {
         "operator_signature": {
           "description": "Signature from authorised operator",
@@ -6058,14 +6017,6 @@
         },
         "payload_hash": {
           "description": "Hash of the payload to be signed for user registration",
-          "type": "string"
-        },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx Register User request to be displayed to the user",
-          "type": "string"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
           "type": "string"
         }
       }
@@ -6105,12 +6056,10 @@
         "expiration_timestamp",
         "nonce",
         "payload_hash",
-        "readable_transaction",
         "signable_message",
         "stark_key",
         "vault_id_buy",
-        "vault_id_sell",
-        "verification_signature"
+        "vault_id_sell"
       ],
       "properties": {
         "amount_buy": {
@@ -6144,10 +6093,6 @@
           "description": "Payload Hash",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx trade transaction to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign with L1 wallet to confirm trade request",
           "type": "string"
@@ -6163,10 +6108,6 @@
         "vault_id_sell": {
           "description": "ID of the vault to sell from",
           "type": "integer"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
-          "type": "string"
         }
       }
     },
@@ -6204,10 +6145,6 @@
           "description": "Payload Hash",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx trade transaction to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign with L1 wallet to confirm trade request",
           "type": "string"
@@ -6223,10 +6160,6 @@
         "vault_id_sell": {
           "description": "ID of the vault to sell from",
           "type": "integer"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
-          "type": "string"
         }
       }
     },
@@ -6374,11 +6307,9 @@
         "asset_id",
         "nonce",
         "payload_hash",
-        "readable_transaction",
         "signable_message",
         "stark_key",
-        "vault_id",
-        "verification_signature"
+        "vault_id"
       ],
       "properties": {
         "amount": {
@@ -6397,10 +6328,6 @@
           "description": "Encoded payload hash",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx withdrawal request to be displayed to the user",
-          "type": "string"
-        },
         "signable_message": {
           "description": "Message to sign with L1 wallet to verity withdrawal request",
           "type": "string"
@@ -6412,10 +6339,6 @@
         "vault_id": {
           "description": "ID of the vault we are withdrawing from",
           "type": "integer"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
-          "type": "string"
         }
       }
     },
@@ -7329,12 +7252,10 @@
         "expiration_timestamp",
         "nonce",
         "payload_hash",
-        "readable_transaction",
         "receiver_stark_key",
         "receiver_vault_id",
         "sender_vault_id",
-        "token",
-        "verification_signature"
+        "token"
       ],
       "properties": {
         "amount": {
@@ -7357,10 +7278,6 @@
           "description": "Hash of the payload to be signed for transfer",
           "type": "string"
         },
-        "readable_transaction": {
-          "description": "EIP-712 encoding of the StarkEx transfer request to be displayed to the user",
-          "type": "string"
-        },
         "receiver_stark_key": {
           "description": "Receiver of the transfer",
           "type": "string"
@@ -7375,10 +7292,6 @@
         },
         "token": {
           "$ref": "#/definitions/signableTransferResponseDetailsToken"
-        },
-        "verification_signature": {
-          "description": "IMX signed readable_transaction and payload_hash",
-          "type": "string"
         }
       }
     },
@@ -7823,44 +7736,6 @@
       ],
       "x-go-gen-location": "models"
     },
-    "collection.Collection": {
-      "type": "object",
-      "properties": {
-        "address": {
-          "type": "string"
-        },
-        "collectionImageURL": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
-        },
-        "iconURL": {
-          "type": "string"
-        },
-        "lastCollectionEventID": {
-          "type": "string"
-        },
-        "metadataAPIURL": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "projectID": {
-          "type": "integer"
-        },
-        "projectOwnerAddress": {
-          "type": "string"
-        },
-        "updatedAt": {
-          "type": "string"
-        }
-      }
-    },
     "contract.CreateAPIRequest": {
       "type": "object",
       "properties": {
@@ -7914,14 +7789,6 @@
         }
       ],
       "x-go-gen-location": "models"
-    },
-    "engine.RegisterUserResult": {
-      "type": "object",
-      "properties": {
-        "tx_hash": {
-          "type": "string"
-        }
-      }
     },
     "exchange.CreateExchangeAndURLResponse": {
       "type": "object",
@@ -8534,24 +8401,6 @@
       "allOf": [
         {
           "$ref": "#/definitions/FeeInfo"
-        }
-      ],
-      "x-go-gen-location": "models"
-    },
-    "transferToken": {
-      "description": "Token transferred by the user",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Token"
-        }
-      ],
-      "x-go-gen-location": "models"
-    },
-    "withdrawalToken": {
-      "description": "Details of the asset this user is withdrawing",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Token"
         }
       ],
       "x-go-gen-location": "models"
