# src/api/models/collection-collection.ts
@@ -1,90 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Immutable X API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 3.0
- * Contact: support@immutable.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-
-/**
- * 
- * @export
- * @interface CollectionCollection
- */
-export interface CollectionCollection {
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'address'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'collectionImageURL'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'createdAt'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'description'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'iconURL'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'lastCollectionEventID'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'metadataAPIURL'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'name'?: string;
-    /**
-     * 
-     * @type {number}
-     * @memberof CollectionCollection
-     */
-    'projectID'?: number;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'projectOwnerAddress'?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CollectionCollection
-     */
-    'updatedAt'?: string;
-}
-
