# src/api/models/get-signable-order-response.ts
@@ -72,12 +72,6 @@ export interface GetSignableOrderResponse {
      */
     'payload_hash': string;
     /**
-     * EIP-712 encoding of the StarkEx order transaction to be displayed to the user
-     * @type {string}
-     * @memberof GetSignableOrderResponse
-     */
-    'readable_transaction': string;
-    /**
      * Message to sign with L1 wallet to confirm order request
      * @type {string}
      * @memberof GetSignableOrderResponse
@@ -101,11 +95,5 @@ export interface GetSignableOrderResponse {
      * @memberof GetSignableOrderResponse
      */
     'vault_id_sell': number;
-    /**
-     * IMX signed readable_transaction and payload_hash
-     * @type {string}
-     * @memberof GetSignableOrderResponse
-     */
-    'verification_signature': string;
 }
 
