# src/api/models/get-signable-trade-response.ts
@@ -72,12 +72,6 @@ export interface GetSignableTradeResponse {
      */
     'payload_hash': string;
     /**
-     * EIP-712 encoding of the StarkEx trade transaction to be displayed to the user
-     * @type {string}
-     * @memberof GetSignableTradeResponse
-     */
-    'readable_transaction': string;
-    /**
      * Message to sign with L1 wallet to confirm trade request
      * @type {string}
      * @memberof GetSignableTradeResponse
@@ -101,11 +95,5 @@ export interface GetSignableTradeResponse {
      * @memberof GetSignableTradeResponse
      */
     'vault_id_sell': number;
-    /**
-     * IMX signed readable_transaction and payload_hash
-     * @type {string}
-     * @memberof GetSignableTradeResponse
-     */
-    'verification_signature': string;
 }
 
