# src/api/models/index.ts
@@ -13,7 +13,6 @@ export * from './balance';
 export * from './cancel-order-request';
 export * from './cancel-order-response';
 export * from './collection';
-export * from './collection-collection';
 export * from './collection-details';
 export * from './collection-filter';
 export * from './contract-create-apirequest';
@@ -43,7 +42,6 @@ export * from './encode-asset-request-token';
 export * from './encode-asset-request-token-data';
 export * from './encode-asset-response';
 export * from './encode-asset-token-data';
-export * from './engine-register-user-result';
 export * from './exchange';
 export * from './exchange-create-exchange-and-urlresponse';
 export * from './fee';
@@ -156,8 +154,6 @@ export * from './trades-create-trade-request';
 export * from './trades-create-trade-request-fee-info';
 export * from './transfer';
 export * from './transfer-request';
-export * from './transfer-token';
 export * from './update-collection-request';
 export * from './widget-params';
 export * from './withdrawal';
-export * from './withdrawal-token';
